test/tests/compiler/18_structures/valid/import_and_use/plx1_force_import_parens.plx
pub fn main(none) i32 {
    x: i32 = 0
    import `open_paren`
    import `incr2_x_parens`
    + (
    import `incr2_x_parens`
    import `incr2_x_parens`
    import `incr2_x_parens`
    import    !`incr2_x_parens`
    + (
    import ! `incr2_x_parens`
    )) +
    import `incr2_x_parens`
    import `incr2_x_parens`
    import `incr2_x_parens`
    import! `incr2_x_parens`
    + (
    import `incr_x`
    import! `incr_x`
    + 1)
    import !`close_paren`
    return x ~= 10
}
